- 3466448: Multiple OpenSearchServer instances on one Tomcat server
- 3466447: Adding NumDeletedDocs in Runtime/Index
- 3466445: Upgrade Apache POI to 3.8	
- 3422180: Upgrade to ZK 5.0.10
- 3417863: Upgrade Tomcat to version 6.0.35
- 3421240: JSON response for OpenSearchServer
- 3386107: OpenSearch Standards

OpenSearchServer 1.2.4

New features:
- 3498421: Set a default URL value for replication
- 3498373: Remove script and object tag content in db crawler
- 3483920: BoostQuery support
- 3483681: Add a download button for log files
- 3482284: LimitInputStream should be buffered
- 3477836: A separated error log for the parser	
- 3469777: Scored snippets

Bug fixes:
- 3500288: Wrong facet count when using optimized collapsing
- 3498607: NPE when collapsing is enable with no documents found
- 3485241: Pages with meta noindex are indexed
- 3483798: HTML parser prints many logs
- 3483259: Underscore added when using synonyms on expression
- 3482151: Monitor API response gives error
- 3479649: SetField and DeleteField API don't update config.xml
- 3479548: Report log files are truncated
- 3476578: UTF-8 character as separator in snippet field
- 3475446: head indexed instead of body (using <script /> in head)
- 3476551: Query with Quotation Marks has unusual results	
- 3472905: Error while crawling local HTML file
- 3471749: Out Of Memory Error while indexing PDF document

OpenSearchServer 1.2.3

New features:
- 3431741: Fault tolerant parser on XML upload
- 3429967: Scheduler task: monitoring upload
- 3419014: Delete by query task in scheduler
- 3396935: Log files viewable in the user interface
- 3393751: XML load sheduler task
- 3393063: Upgrade to SeleniumHQ 2.0.4
- 3393052: Upgrade to NekoHTML 1.9.15
- 3393047: Upgrade to TagSoup 1.2.1
- 3393046: Upgrade to PDFBox 1.6.x
- 3393032: Frameset support
- 3392359: Drupal module for OpenSearchServer
- 3380911: Scheduler informations in home view	
- 3370376: Parser have editable parameters
- 3366055: URLBrowser API