@@ -469,7 +469,7 @@ public class FileManager {
 		SearchRequest deleteRequest = new SearchRequest(fileDbClient);
 
 		deleteRequest.setQueryString(buildQueryString(
-				FileItemFieldEnum.directory.getName(), rowToDelete, true));
+				FileItemFieldEnum.uri.getName(), rowToDelete, true));
 		fileDbClient.deleteDocuments(deleteRequest);
 	}
 
@@ -495,7 +495,7 @@ public class FileManager {
 			IllegalAccessException {
 
 		List<Target> mappedPath = targetClient.getFileCrawlerFieldMap()
-				.getLinks(FileItemFieldEnum.directory.getName());
+				.getLinks(FileItemFieldEnum.uri.getName());
 
 		if (mappedPath == null || mappedPath.isEmpty())
 			return false;
